@@ -1,3 +1,8 @@
+2010-02-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed a substitute bug with a?_{i j} type patterns (would mess
+	up the indices).
+
 2010-02-05  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Released 1.19
